# crustcrab

./: Cargo.toml  README.md  rustfmt.toml
assets/: atmosphere.toml  blocks.toml  client.toml  clock.toml  player.toml  server.toml  sky.toml
assets/config/: blocks.toml  client.toml  server.toml
assets/config/models/: cube.toml  flower.toml
assets/shaders/: aces.wgsl  atmosphere.wgsl  blend.wgsl  blender.wgsl  blit.wgsl  block.wgsl  cloud.wgsl  color.wgsl  crosshair.wgsl  filter.wgsl  fog.wgsl  highlight.wgsl  inventory.wgsl  object.wgsl  output.wgsl  selected.wgsl  selection.wgsl  sky.wgsl  star.wgsl
assets/textures/blocks/: indices.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  color.rs  lib.rs  main.rs  utils.rs
src/client/: app.rs  event_loop.rs  mod.rs  renderer.rs  stopwatch.rs  window.rs
src/client/game/: atmosphere.rs  clock.rs  cloud.rs  fog.rs  hover.rs  mod.rs  object.rs  output.rs  sky.rs  stopwatch.rs  world.rs
src/client/game/gui/: crosshair.rs  inventory.rs  mod.rs
src/client/game/player/: camera.rs  frustum.rs  mod.rs  projection.rs
src/client/game/player/gui/: crosshair.rs  mod.rs
src/client/game/scene/: clock.rs  depth.rs  depth_buffer.rs  hover.rs  light.rs  mod.rs  selected_block.rs  selection.rs  sky.rs  world.rs
src/client/game/scene/player/: camera.rs  frustum.rs  mod.rs  ray.rs
src/client/game/scene/sky/: color_map.rs  mod.rs  sphere.rs
src/client/game/scene/world/: atlas.rs  block.rs  chunk.rs  mod.rs  selected.rs
src/client/game/sky/: atmosphere.rs  mod.rs  object.rs  star.rs
src/client/renderer/: blender.rs  buffer.rs  effect.rs  mesh.rs  mod.rs  program.rs  shader.rs  uniform.rs  utils.rs
src/client/renderer/texture/: image.rs  mod.rs  screen.rs
src/math/: bounds.rs  mod.rs  ray.rs
src/primitives/: mod.rs
src/server/: event_loop.rs  mod.rs  ticker.rs
src/server/game/: clock.rs  mod.rs  player.rs
src/server/game/player/: mod.rs  ray.rs
src/server/game/scene/: clock.rs  mod.rs
src/server/game/scene/world/: block.rs  chunk.rs  light.rs  loader.rs  mod.rs
src/server/game/world/: action.rs  block.rs  chunk.rs  generator.rs  height.rs  light.rs  loader.rs  mod.rs
src/server/game/world/block/: area.rs  data.rs  light.rs  mod.rs  model.rs
src/server/game/world/chunk/: area.rs  generator.rs  light.rs  mod.rs
src/server/scene/: clock.rs  mod.rs  player.rs
src/server/scene/player/: mod.rs  ray.rs
src/server/scene/world/: block.rs  chunk.rs  generator.rs  loader.rs  mod.rs
src/shared/: bincode.rs  bound.rs  color.rs  dash.rs  enum_map.rs  indexmap.rs  mod.rs  pool.rs  ray.rs  toml.rs  utils.rs
