[workspace]
members = ["macros"]

[package]
name = "crustcrab"
edition = "2024"
default-run = "crustcrab"

[profile.lto]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bitfield = "0.19.4"
bitflags = { version = "2.10.0", features = ["serde"] }
bon = "3.8.2"
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.5.57", features = ["derive"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
generic-array = "1.3.5"
image = "0.25.9"
indexmap = "2.13.0"
macros = { path = "macros" }
nalgebra = { version = "0.34.1", features = ["bytemuck", "serde-serialize"] }
noise = "0.9.0"
pollster = "0.4.0"
rand = { version = "0.10.0", default-features = false }
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
toml = "1.0.1"
uuid = { version = "1.20.0", features = ["fast-rng", "serde", "v4"] }
walkdir = "2.5.0"
wgpu = "28.0.0"
winit = "0.31.0-beta.2"
