[workspace]
members = ["macros"]

[package]
name = "crustcrab"
edition = "2024"
default-run = "crustcrab"

[profile.lto]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bitfield = "0.19.4"
bitflags = { version = "2.13.0", features = ["serde"] }
bon = "3.9.3"
bytemuck = { version = "1.25.1", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.16"
env_logger = "0.11.11"
generic-array = "1.4.4"
image = "0.25.10"
indexmap = "2.14.0"
macros = { path = "macros" }
nalgebra = { version = "0.35.0", features = ["bytemuck", "serde-serialize"] }
noise = "0.9.0"
pollster = "1.0.1"
rand = { version = "0.10.2", default-features = false }
rayon = "1.12.0"
rustc-hash = "2.1.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
toml = "1.1.2"
uuid = { version = "1.23.5", features = ["fast-rng", "serde", "v4"] }
walkdir = "2.5.0"
wgpu = "30.0.0"
winit = "0.31.0-beta.2"
